Fix Staking dapp dark mode styles

--- a/apps/block_scout_web/assets/css/theme/_dark-theme.scss
+++ b/apps/block_scout_web/assets/css/theme/_dark-theme.scss
@@ -1046,6 +1046,11 @@ $dark-stakes-banned-background: #3e314c;
 	.tooltip-inversed-color.bs-tooltip-auto[x-placement^="left"] .arrow::before {
 		border-left-color: $btn-line-color !important;
 	}
+
+	.stakes-top {
+		background-color: $dark-bg;
+		background-image: none;
+	}
 }
 
 .navbar-dark .navbar-toggler {
